--- a/Akinator/templates/interface/index.html
+++ b/Akinator/templates/interface/index.html
@@ -58,8 +58,9 @@
         <img src="{% static 'interface/images/aki.png' %}" alt="Akinator Logo" class="akinator-logo">
         
         <!-- スタートボタン -->
-         
+        <form action="{% url 'prepare_page' %}" method="get">
         <button class="start-button">START</button>
+        </form>
     </div>
 </body>
 </html>
