--- a/Akinator/templates/interface/explanation.html
+++ b/Akinator/templates/interface/explanation.html
@@ -17,7 +17,7 @@
             position: relative;
             width: 100%;
             height: 100vh;
-            background-image: url('./images/kusa.png');
+            background-image: url("{% static 'interface/images/gras.png' %}");
             background-size: cover;
             background-position: center;
         }
