--- a/Akinator/templates/interface/gameover.html
+++ b/Akinator/templates/interface/gameover.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Over</title>
+    <title>失敗画面</title>
     <style>
         body {
             margin: 0;
@@ -84,7 +84,6 @@
             background: #f0f0f0;
             color: #0066cc;
         }
-        
         @media (max-width: 900px) {
             .fail-center-area {
                 flex-direction: column;
@@ -126,6 +125,31 @@
     <div class="button-area">
         <button class="result-btn">もう一度</button>
         <button class="result-btn">やめる</button>
+        <audio src="/しゅわしゅわハニーレモン350ml.mp3" autoplay loop></audio>
+        <script>
+            //音声の再生
+            document.getElementById("audio").play();
+
+            //音声の一時停止
+            document.getElementById("audio").pause();
+
+
+            $(function () {
+            var audioBtn = $(".audio_button"),
+                audioWrap = $(".audio_wrap"),
+                audio = document.getElementById("audio");
+
+            audioBtn.on("click", function () {
+                if (audioWrap.hasClass("play")) {
+                audio.pause();
+                audioWrap.removeClass("play");
+                } else {
+                audio.play();
+                audioWrap.addClass("play");
+                }
+            });
+            });
+        </script>
     </div>
 </body>
 </html>
