--- a/Akinator/templates/interface/prediction.html
+++ b/Akinator/templates/interface/prediction.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: url("{% static 'interface/images/gras2.png' %}") no-repeat center center fixed;
+            background: url('gras2.jpg') no-repeat center center fixed;
             background-size: cover;
             width: 100vw;
             height: 100vh;
@@ -102,10 +102,35 @@
 </head>
 <body>
     <div class="dialog">あなたが思い浮かべているのは〇〇〇ですか？</div>
-    <img src="{% static 'interface/images/purin.png' %}" alt="プリン" class="jigglypuff">
+    <img src="purin.png" alt="プリン" class="jigglypuff">
     <div class="button-area">
         <button class="answer-btn">そうです</button>
         <button class="answer-btn">違います</button>
+        <audio src="/しゅわしゅわハニーレモン350ml.mp3" autoplay loop></audio>
+        <script>
+            //音声の再生
+            document.getElementById("audio").play();
+
+            //音声の一時停止
+            document.getElementById("audio").pause();
+
+
+            $(function () {
+            var audioBtn = $(".audio_button"),
+                audioWrap = $(".audio_wrap"),
+                audio = document.getElementById("audio");
+
+            audioBtn.on("click", function () {
+                if (audioWrap.hasClass("play")) {
+                audio.pause();
+                audioWrap.removeClass("play");
+                } else {
+                audio.play();
+                audioWrap.addClass("play");
+                }
+            });
+            });
+        </script>
     </div>
 </body>
 </html>
