--- a/Akinator/templates/interface/resultrender.html
+++ b/Akinator/templates/interface/resultrender.html
@@ -174,5 +174,29 @@
         <img src="{% static 'interface/images/nya-su.png' %}" alt="ニャース">
     </div>
 </body>
+    <audio src="/しゅわしゅわハニーレモン350ml.mp3" autoplay loop></audio>
+    <script>
+        //音声の再生
+        document.getElementById("audio").play();
 
+        //音声の一時停止
+        document.getElementById("audio").pause();
+
+
+        $(function () {
+        var audioBtn = $(".audio_button"),
+            audioWrap = $(".audio_wrap"),
+            audio = document.getElementById("audio");
+
+        audioBtn.on("click", function () {
+            if (audioWrap.hasClass("play")) {
+            audio.pause();
+            audioWrap.removeClass("play");
+            } else {
+            audio.play();
+            audioWrap.addClass("play");
+            }
+        });
+        });
+    </script>
 </html>
