--- a/Akinator/templates/interface/explanation.html
+++ b/Akinator/templates/interface/explanation.html
@@ -188,7 +188,7 @@
         <img class="minun" src="{% static 'interface/images/mainan.png' %}" alt="マイナン">
         <img class="plusle" src="{% static 'interface/images/purasuru.png' %}" alt="プラスル">
     </div>
-    <audio src="/しゅわしゅわハニーレモン350ml.mp3" autoplay loop></audio>
+    <audio src="{% static 'interface/audio/しゅわしゅわハニーレモン350ml.mp3' %}" autoplay loop></audio>
     <script>
         //音声の再生
         document.getElementById("audio").play();
