--- a/Akinator/templates/interface/gameover.html
+++ b/Akinator/templates/interface/gameover.html
@@ -125,7 +125,7 @@
     <div class="button-area">
         <button class="result-btn">もう一度</button>
         <button class="result-btn">やめる</button>
-        <audio src="/しゅわしゅわハニーレモン350ml.mp3" autoplay loop></audio>
+        <audio src="{% static 'interface/audio/しゅわしゅわハニーレモン350ml.mp3' %}" autoplay loop></audio>
         <script>
             //音声の再生
             document.getElementById("audio").play();
