--- a/Akinator/templates/interface/index.html
+++ b/Akinator/templates/interface/index.html
@@ -67,7 +67,7 @@
     </style>
 </head>
 <body>
-    <audio src="/しゅわしゅわハニーレモン350ml.mp3" autoplay loop id="audio"></audio>
+    <audio src="{% static 'interface/audio/しゅわしゅわハニーレモン350ml.mp3' %}" autoplay loop id="audio"></audio>
     <div id="fadein-overlay"></div>
     <div id="fadeout-overlay"></div>
     <div class="container">
