--- a/Akinator/templates/interface/prediction.html
+++ b/Akinator/templates/interface/prediction.html
@@ -106,7 +106,7 @@
     <div class="button-area">
         <button class="answer-btn">そうです</button>
         <button class="answer-btn">違います</button>
-        <audio src="/しゅわしゅわハニーレモン350ml.mp3" autoplay loop></audio>
+        <audio src="{% static 'interface/audio/しゅわしゅわハニーレモン350ml.mp3' %}" autoplay loop></audio>
         <script>
             //音声の再生
             document.getElementById("audio").play();
