--- a/Akinator/templates/interface/preparation.html
+++ b/Akinator/templates/interface/preparation.html
@@ -233,7 +233,7 @@
       display: none;
     }
   </style>
-  <audio src="/しゅわしゅわハニーレモン350ml.mp3" autoplay loop></audio>
+  <audio src="{% static 'interface/audio/しゅわしゅわハニーレモン350ml.mp3' %}" autoplay loop></audio>
   <script>
       //音声の再生
       document.getElementById("audio").play();
