--- a/Akinator/templates/interface/question.html
+++ b/Akinator/templates/interface/question.html
@@ -146,7 +146,7 @@
             </form>
         </div>
     </div>
-    <audio src="/しゅわしゅわハニーレモン350ml.mp3" autoplay loop></audio>
+    <audio src="{% static 'interface/audio/しゅわしゅわハニーレモン350ml.mp3' %}" autoplay loop></audio>
     <script>
         //音声の再生
         document.getElementById("audio").play();
