--- a/Akinator/templates/interface/resultrender.html
+++ b/Akinator/templates/interface/resultrender.html
@@ -174,7 +174,7 @@
         <img src="{% static 'interface/images/nya-su.png' %}" alt="ニャース">
     </div>
 </body>
-    <audio src="/しゅわしゅわハニーレモン350ml.mp3" autoplay loop></audio>
+    <audio src="{% static 'interface/audio/しゅわしゅわハニーレモン350ml.mp3' %}" autoplay loop></audio>
     <script>
         //音声の再生
         document.getElementById("audio").play();
